<resources>
    <string name="app_name">Editor</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="nu">New</string>
    <string name="open">Open</string>
    <string name="save">Save</string>
    <string name="about_header">Öppenlab</string>
    <string name="about_body">Text Editor from Öppenlab\noppenlab.net</string>
    <string name="apache_link">Apache License 2.0</string>
    <string name="gnu_link">GPL v3</string>
    <string name="about_markwon">Markdown rendering is carried out by Markwon: Apache License Version 2.0</string>
    <string name="markwon_link">github.com/noties/Markwon</string>
    <string name="about_lic">Copyright © 2020 Öppenlab\n
\nGNU General Public License, version 3\n
\nThis program is free software; you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation; either version 3 of the License, or any later version.\n
\nThis program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details.\n
\nYou should have received a copy of the GNU General Public License along with this program.  If not, see www.gnu.org/licenses</string>
    <string name="inter_info">The app typeface is Inter: Copyright © Rasmus Andersson Open Font License</string>
    <string name="inter_link">rsms.me/inter</string>
</resources>
