<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/default_spacer">

    <ImageView
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:src="@drawable/olab"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/default_spacer"
        android:text="@string/about_body"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/default_spacer"
        android:text="@string/about_markwon"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/markwon_apache_license_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apache_link"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/default_spacer"
        android:text="@string/about_lic"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/gnu_license_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gnu_link"/>

</LinearLayout>